# weave

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README.zh.md  generate.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/config/: PipelineConfigForm.tsx
client/src/components/progress/: ProgressPanel.tsx  StepIndicator.tsx
client/src/components/result/: MarkdownViewer.tsx  ResultPanel.tsx
client/src/components/upload/: FileList.tsx  FileUploadZone.tsx
client/src/hooks/: usePipelineJob.ts
client/src/lib/: api.ts  i18n.ts
docs/: cli-reference.md  programmatic-usage.md  troubleshooting.md
server/: __init__.py  main.py  models.py
server/routers/: pipeline.py
tests/: test_client.py  test_math_render.py  test_outline.py  test_pdf_export.py  test_pipeline.py  test_postprocess.py
weave/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
weave/ai/: __init__.py  client.py  outline.py  prompts.py
weave/ai/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
weave/converter/: __init__.py  pdf_to_images.py
weave/export/: __init__.py  math_render.py  pdf.py  postprocess.py
